@@ -39,6 +39,8 @@ defaults.
 - Updated ML mode (Ingmar Stein)
 - Printing code rewritten to use Java 2 print API. The only user-visible
   change is that the printed output is now word-wrapped.
+- The file system browser now preserves expansion state when reloading
+  directories
 
 + Bug Fixes
 
@@ -65,6 +67,8 @@ defaults.
     compile under a 1.3 JDK.
 - Embedded tabs in lines would show up as boxes in bracket matching
   status bar messages
+- Sometimes hard tabs would be inserted into the buffer, even if soft
+  tabs were enabled
 
 + API Changes
 
